--- a/package.json
+++ b/package.json
@@ -7,5 +7,7 @@
     , "jade": ">= 0.0.1"
     , "sensortag": ">= 1.0.1"
     , "socket.io": ">= 1.3.3"
+    , "request" : "~2.36.0"
+    , "jsonfile" : "latest"
   }
 }
