--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   , "version": "0.0.1"
   , "private": true
   , "dependencies": {
-      "express": "2.5.8"
-    , "jade": ">= 0.0.1"
-    , "sensortag": ">= 1.0.1"
-    , "socket.io": ">= 1.3.3"
+      "express": "~2.5.8"
+    , "jade": "~1.11.0"
+    , "sensortag": "~1.0.1"
+    , "socket.io": "~1.3.3"
     , "request" : "~2.36.0"
-    , "jsonfile" : "latest"
+    , "jsonfile" : "~2.2.1"
   }
 }
